# c-testrunnerswitcher

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
.github/: copilot-instructions.md  fabricbot.json
build_functions/: CMakeLists.txt  common_suppresions.sup  main_cpp_unittest.cpp  main_ctest.c  validate_timed_test_suite.ps1
build_functions/scripts/: validate_timed_test_suite.ps1
build_functions/tests/validate_timed_test_suite/: CMakeLists.txt
build_functions/tests/validate_timed_test_suite/has_violations/: multi_arg_int.c  sample_module_int.c
build_functions/tests/validate_timed_test_suite/no_violations/: no_init_int.c  timed_module_int.c
build_functions/tests_validate_timed_test_suite/: CMakeLists.txt
build_functions/tests_validate_timed_test_suite/has_violations/: has_include_int.c  has_include_int_expected.c  multi_arg_int_expected.c  sample_module_int_expected.c
build_functions/tests_validate_timed_test_suite/no_violations/: exempted_module_int.c
configs/: testrunnerswitcherConfig.cmake
inc/: cppunittest_mutex_fixtures.h  ctest_2_cppunittest.h  ctrs_leak_check.h  macro_utils.h  run_cppunittest_suite.h  testmutex.h  testrunnerswitcher.h
jenkins/: linux_c.sh  linux_c_gcc44.sh  windows_c.cmd
src/: cppunittest_mutex_fixtures.cpp  ctrs_sprintf.c  testmutex.c
test_projects/: CMakeLists.txt
test_projects/ctest_2_cppunittest_ut/: CMakeLists.txt  ctest_2_cppunittest_ut.cpp
test_projects/parameterized_tests_ut/: CMakeLists.txt  parameterized_tests_ut.c
test_projects/test_project_e2e/: CMakeLists.txt  test_project_e2e.c
test_projects/test_project_e2e_with_suffix/: CMakeLists.txt
test_projects/test_project_int/: CMakeLists.txt  test_project_int.c
test_projects/test_project_perf/: CMakeLists.txt  test_project_perf.c
test_projects/test_project_ut/: CMakeLists.txt  test_project_ut.c
test_projects/test_project_with_custom_main_ut/: CMakeLists.txt  main.c  main_cpp_unittest.cpp  test_project_with_custom_main_ut.c
test_projects/test_watchdog_int/: CMakeLists.txt  test_watchdog_int.c
tools/test_watchdog/: CMakeLists.txt  test_watchdog.c
